Add Python version

--- a/nat.ipynb
+++ b/nat.ipynb
@@ -23,6 +23,15 @@
    "source": [
     "print(\"Hello, World\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<h4>Write a Python program to get the Python version you are using.</h4>"
+   ]
   }
  ],
  "metadata": {
