create comments tutorial

--- a/nat.ipynb
+++ b/nat.ipynb
@@ -4,24 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a python program to print \"Hello, World!\""
+    "**Python Comments**\n",
+    "Comments give a brief explanation of what the code does.\n",
+    "They are not executed when the code runs.\n",
+    "Comments begin with a #\n",
+    "Multiline comments, you can use **#** for each line or ***\"\"\"***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World\n"
+      "Python is Fun!\n",
+      "I love coding\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nthis is another way\\nof writing multiline\\ncomments\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Hello, World\")"
+    "#This is a comment\n",
+    "print(\"Python is Fun!\")\n",
+    "print(\"I love coding\") #comment at the end\n",
+    "\n",
+    "#comments can also be in multiple lines\n",
+    "#comment1\n",
+    "#comment2\n",
+    "\n",
+    "\"\"\"\n",
+    "this is another way\n",
+    "of writing multiline\n",
+    "comments\n",
+    "\"\"\""
    ]
   }
  ],
