--- a/nat.ipynb
+++ b/nat.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Python Comments**\n",
+    "**###Python Comments**\n",
+    "\n",
     "Comments give a brief explanation of what the code does.\n",
     "They are not executed when the code runs.\n",
     "Comments begin with a #\n",
@@ -50,6 +51,11 @@
     "comments\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
