--- a/nat.ipynb
+++ b/nat.ipynb
@@ -7,8 +7,8 @@
     "###**Python Comments**\n",
     "\n",
     "Comments give a brief explanation of what the code does.\n",
-    "They are not executed when the code runs.\\\n",
-    "Comments begin with a #\\\n",
+    "They are not executed when the code runs.\\n\n",
+    "Comments begin with a #\\n\n",
     "For Multiline comments, you can use **#** for each line or ***\"\"\"***"
    ]
   },
