--- a/nat.ipynb
+++ b/nat.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###**Python Comments**\n",
+    "### **Python Comments**\n",
     "\n",
-    "Comments give a brief explanation of what the code does.\n",
-    "They are not executed when the code runs.\\n\n",
-    "Comments begin with a #\\n\n",
+    "Comments give a brief explanation of what the code does.  \n",
+    "They are not executed when the code runs.  \n",
+    "Comments begin with a #  \n",
     "For Multiline comments, you can use **#** for each line or ***\"\"\"***"
    ]
   },
