--- a/nat.ipynb
+++ b/nat.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python Variables"
+    "### **Python Variables**"
    ]
   }
  ],
