--- a/nat.ipynb
+++ b/nat.ipynb
@@ -56,8 +56,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Python Variables**"
+    "### **Python Variables**\n",
+    "\n",
+    "These are containers for storing data.\n",
+    "To create a variable you assign it to a certain value eg `x = 28` or `y = \"Alex\"`\n",
+    "Here the  variable x has been assigned to the value 28.\n",
+    "Variables are **case sensitive** so `x = 28` and `X = 28` are two diferent variables.\n",
+    "You can specify the data types while decalring the variable **(casting)** i.e `x=int(28)` `y=str(28)` `z=float(28)`. The values will have different data types.\n",
+    "To check for data type we use **type()** i.e `print(type(x))` `print(type(y))` `print(type(z))`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "Alex\n",
+      "28\n",
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create three variables x,y,X and print\n",
+    "x = 28\n",
+    "y = \"Alex\"\n",
+    "X = 28\n",
+    "\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(X)\n",
+    "\n",
+    "#create variables a,b,c by casting\n",
+    "a = int(28)\n",
+    "b = str(28)\n",
+    "c = float(28)\n",
+    "\n",
+    "#data type of a,b,c\n",
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "print(type(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
