finish variable cases

--- a/nat.ipynb
+++ b/nat.ipynb
@@ -108,7 +108,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Variable Names\n",
+    "\n",
+    "There are specific rules for naming variables:\n",
+    "Must start with letter or _,cannot start with a number.\n",
+    "Can only have A-z(upper and lower case), 0-9 and _ no special characters eg *,&,$,@ etc.\n",
+    "Are case-sensistive.\n",
+    "Cannot be any of **python keywords**.\n",
+    "For variables with many words, you can use **Snake** Case, **Camel** Case, **Pascal** Case or your prefernce.\n",
+    "You can use any other way to name your variables as long as the rules are satisfied."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1var = \"Python\"     #variable cannot start with number\n",
+    "my@var = \"Python\"   #cannot contain special characters eg @\n",
+    "my-var = \"Python\"   #cannot contain special characters eg -\n",
+    "my var = \"Python\"   #cannot have spaces\n",
+    "\n",
+    "year_of_birth = 2000 #Snake Case-here all words are separated by _\n",
+    "yearOfBirth = 2000   #Camel Case-here all words except first start with capital letter\n",
+    "YearOfBirth = 2000   #Pascal Case-here all words start with capital letter\n",
+    "Year_Of_Birth = 2000 #You can also write as you prefer"
+   ]
   }
  ],
  "metadata": {
