--- a/nat.ipynb
+++ b/nat.ipynb
@@ -109,13 +109,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Variable Names\n",
+    "### Variable Names\n",
     "\n",
-    "There are specific rules for naming variables:\n",
-    "Must start with letter or _,cannot start with a number.\n",
-    "Can only have A-z(upper and lower case), 0-9 and _ no special characters eg *,&,$,@ etc.\n",
-    "Are case-sensistive.\n",
-    "Cannot be any of **python keywords**.\n",
+    "There are specific rules for naming variables:  \n",
+    "1.Must start with letter or _,cannot start with a number.  \n",
+    "2.Can only have A-z(upper and lower case), 0-9 and _ no special characters eg *,&,$,@ etc.    \n",
+    "3.Cannot be any of **python keywords**.  \n",
+    "4.Are case-sensistive.  \n",
     "For variables with many words, you can use **Snake** Case, **Camel** Case, **Pascal** Case or your prefernce.\n",
     "You can use any other way to name your variables as long as the rules are satisfied."
    ]
