edit md for vvariables

--- a/nat.ipynb
+++ b/nat.ipynb
@@ -58,11 +58,12 @@
    "source": [
     "### **Python Variables**\n",
     "\n",
-    "These are containers for storing data.\n",
-    "To create a variable you assign it to a certain value eg `x = 28` or `y = \"Alex\"`\n",
-    "Here the  variable x has been assigned to the value 28.\n",
-    "Variables are **case sensitive** so `x = 28` and `X = 28` are two diferent variables.\n",
-    "You can specify the data types while decalring the variable **(casting)** i.e `x=int(28)` `y=str(28)` `z=float(28)`. The values will have different data types.\n",
+    "These are containers for storing data.  \n",
+    "To create a variable you assign it to a certain value eg `x = 28` or `y = \"Alex\"`  \n",
+    "Here the  variable x has been assigned to the value 28.  \n",
+    "Variables are **case sensitive** so `x = 28` and `X = 28` are two diferent variables.  \n",
+    "You can specify the data types while decalring the variable **(casting)** i.e `x=int(28)` `y=str(28)` `z=float(28)`.  \n",
+    "The values will have different data types.  \n",
     "To check for data type we use **type()** i.e `print(type(x))` `print(type(y))` `print(type(z))`"
    ]
   },
