create datatypes file

--- a/nat.ipynb
+++ b/nat.ipynb
@@ -62,7 +62,7 @@
     "To create a variable you assign it to a certain value eg `x = 28` or `y = \"Alex\"`  \n",
     "Here the  variable x has been assigned to the value 28.  \n",
     "Variables are **case sensitive** so `x = 28` and `X = 28` are two diferent variables.  \n",
-    "You can specify the data types while decalring the variable **(casting)** i.e `x=int(28)` `y=str(28)` `z=float(28)`.  \n",
+    "You can specify the data type while declaring the variable **(casting)** i.e `x=int(28)` `y=str(28)` `z=float(28)`    \n",
     "The values will have different data types.  \n",
     "To check for data type we use **type()** i.e `print(type(x))` `print(type(y))` `print(type(z))`"
    ]
@@ -113,10 +113,10 @@
     "### Variable Names\n",
     "\n",
     "There are specific rules for naming variables:  \n",
-    "1.Must start with letter or _,cannot start with a number.  \n",
-    "2.Can only have A-z(upper and lower case), 0-9 and _ no special characters eg *,&,$,@ etc.    \n",
+    "1.Must **start with letter** or _,cannot start with a number.  \n",
+    "2.Can only have A-z(upper and lower case), 0-9 and _ **no special characters** eg *,&,$,@ etc.    \n",
     "3.Cannot be any of **python keywords**.  \n",
-    "4.Are case-sensistive.  \n",
+    "4.Are **case-sensistive**.  \n",
     "For variables with many words, you can use **Snake** Case, **Camel** Case, **Pascal** Case or your prefernce.\n",
     "You can use any other way to name your variables as long as the rules are satisfied."
    ]
