number ryles for naming var

--- a/nat.ipynb
+++ b/nat.ipynb
@@ -59,7 +59,7 @@
     "### **Python Variables**\n",
     "\n",
     "These are containers for storing data.  \n",
-    "To create a variable you assign it to a certain value eg `x = 28` or `y = \"Alex\"`  \n",
+    "To create a variable you assign it to a certain value using **=** eg `x = 28` or `y = \"Alex\"`  \n",
     "Here the  variable x has been assigned to the value 28.  \n",
     "Variables are **case sensitive** so `x = 28` and `X = 28` are two diferent variables.  \n",
     "You can specify the data type while declaring the variable **(casting)** i.e `x=int(28)` `y=str(28)` `z=float(28)`    \n",
@@ -96,9 +96,9 @@
     "print(X)\n",
     "\n",
     "#create variables a,b,c by casting\n",
-    "a = int(28)\n",
-    "b = str(28)\n",
-    "c = float(28)\n",
+    "a = int(28)    #create integer variable\n",
+    "b = str(28)    #create string variable\n",
+    "c = float(28)  #create float variable\n",
     "\n",
     "#data type of a,b,c\n",
     "print(type(a))\n",
