--- a/nat.ipynb
+++ b/nat.ipynb
@@ -64,7 +64,8 @@
     "Variables are **case sensitive** so `x = 28` and `X = 28` are two diferent variables.  \n",
     "You can specify the data type while declaring the variable **(casting)** i.e `x=int(28)` `y=str(28)` `z=float(28)`    \n",
     "The values will have different data types.  \n",
-    "To check for data type we use **type()** i.e `print(type(x))` `print(type(y))` `print(type(z))`"
+    "To check for data type we use **type()** i.e `print(type(x))` `print(type(y))` `print(type(z))`\n",
+    "Use **del** to delete a variable eg `del x`"
    ]
   },
   {
@@ -103,7 +104,9 @@
     "#data type of a,b,c\n",
     "print(type(a))\n",
     "print(type(b))\n",
-    "print(type(c))"
+    "print(type(c))\n",
+    "\n",
+    "del x          #this deletes the variable x"
    ]
   },
   {
@@ -113,10 +116,11 @@
     "### Variable Names\n",
     "\n",
     "There are specific rules for naming variables:  \n",
-    "1.Must **start with letter** or _,cannot start with a number.  \n",
-    "2.Can only have A-z(upper and lower case), 0-9 and _ **no special characters** eg *,&,$,@ etc.    \n",
-    "3.Cannot be any of **python keywords**.  \n",
-    "4.Are **case-sensistive**.  \n",
+    "1.Must **start with letter** or _  \n",
+    "2.Cannot start with a number.  \n",
+    "3.Can only have A-z(upper and lower case), 0-9 and _ **no special characters** eg *,&,$,@ etc.    \n",
+    "4.Cannot be any of **python keywords**.  \n",
+    "5.Are **case-sensistive**.  \n",
     "For variables with many words, you can use **Snake** Case, **Camel** Case, **Pascal** Case or your prefernce.\n",
     "You can use any other way to name your variables as long as the rules are satisfied."
    ]
