--- a/nat.ipynb
+++ b/nat.ipynb
@@ -141,6 +141,120 @@
     "YearOfBirth = 2000   #Pascal Case-here all words start with capital letter\n",
     "Year_Of_Birth = 2000 #You can also write as you prefer"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables - Assign to Many Values  \n",
+    "\n",
+    "You can assign **many values** to **many variables**.  \n",
+    "Eg `a, b, c = \"cat\", 28.0, \"hen\"`  \n",
+    "You can also assign **one value** to **many variables**.  \n",
+    "Eg `a = b = c = \"Cat\"`  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "28.0\n",
+      "hen\n",
+      "cat\n",
+      "cat\n",
+      "cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "#assign many values to many variables\n",
+    "#note that the no of values = no of variables\n",
+    "a, b, c = \"cat\", 28.0, \"hen\"  \n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "\n",
+    "#assign one value to many variables\n",
+    "#all variables A,B,C will have the value cat\n",
+    "A = B = C = \"cat\"\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output Variables  \n",
+    "\n",
+    "We use the **print()** function to display/output variables.    \n",
+    "To output multiple variables, separate the variables by a **comma** or **+**  \n",
+    "When the + is used to combine two numbers it adds them\n",
+    "Eg `print(A, B, C)` or `print(A + B + C)`  \n",
+    ">[!NOTE]\n",
+    "> You cannot combine a string and a number using +\n",
+    ">It is therefore advised to use commas as this supports all datatypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love coding.\n",
+      "I  love  coding.\n",
+      "I love coding.\n",
+      "20 199.4\n",
+      "219.4\n",
+      "3 dogs\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m Y \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdogs\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(X, Y)\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mX\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m)     \u001b[38;5;66;03m#will give an error\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"I love coding.\"\n",
+    "print(a)\n",
+    "\n",
+    "#output multiple variables\n",
+    "A = \"I \"\n",
+    "B = \"love \"\n",
+    "C = \"coding.\"\n",
+    "print(A, B, C)     #separate by commas\n",
+    "print(A + B + C)   #use the +\n",
+    "\n",
+    "#output numbers using the +\n",
+    "x = 20\n",
+    "y = 199.4\n",
+    "print(x, y)      #will display 20 199.4\n",
+    "print(x + y)     #will display the sum 219.4\n",
+    "\n",
+    "#combine number and string using the +\n",
+    "X = 3\n",
+    "Y = \"dogs\"\n",
+    "print(X, Y)      #will display 3 dogs\n",
+    "print(X + Y)     #will give an error"
+   ]
   }
  ],
  "metadata": {
