--- a/nat.ipynb
+++ b/nat.ipynb
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variables - Assign to Many Values  \n",
+    "### Variables - Assign to Multiple Variables   \n",
     "\n",
     "You can assign **many values** to **many variables**.  \n",
     "Eg `a, b, c = \"cat\", 28.0, \"hen\"`  \n",
@@ -199,7 +199,7 @@
     "When the + is used to combine two numbers it adds them\n",
     "Eg `print(A, B, C)` or `print(A + B + C)`  \n",
     ">[!NOTE]\n",
-    "> You cannot combine a string and a number using +\n",
+    "> You cannot combine a string and a number using +  \n",
     ">It is therefore advised to use commas as this supports all datatypes"
    ]
   },
