--- a/python_datatypes.ipynb
+++ b/python_datatypes.ipynb
@@ -7,8 +7,8 @@
     "### Python Data Types\n",
     "\n",
     "Variables are containers that store data and these data have different types.  \n",
-    "You can set the data type or use contsructor functions to set specific datatype.\n",
-    "You will later on get into detail of what these data types are.\n",
+    "You can set the data type or use contsructor functions to set specific datatype.  \n",
+    "You will later on get into detail of what these data types are.  \n",
     "Python has the following 14 built-in data types:  \n",
     "\n",
     "TEXT \n",
@@ -70,14 +70,14 @@
     "d = [\"cat\", \"dog\", \"hen\"]               #list\n",
     "e = (\"cat\", \"dog\", \"hen\")               #tuple\n",
     "f = range(6)                            #range\n",
-    "g = {\"name\" : \"Alex\", \"grade\" : \"B\"}        #dictionary\n",
+    "g = {\"name\" : \"Alex\", \"grade\" : \"B\"}    #dictionary\n",
     "h = {\"cat\", \"dog\", \"hen\"}               #set\n",
     "i = frozenset({\"cat\", \"dog\", \"hen\"})    #frozenset\n",
-    "j = bool(5)\n",
-    "k = bytes(5)\n",
-    "l = bytearray(5)\n",
-    "m = memoryview(bytes(5))\n",
-    "n = None\n",
+    "j = bool(5)                             #boolean\n",
+    "k = bytes(5)                            #bytes\n",
+    "l = bytearray(5)                        #bytearray\n",
+    "m = memoryview(bytes(5))                #memoryview\n",
+    "n = None                                #NoneType\n",
     "\n",
     "print(type(a))\n",
     "print(type(b))\n",
