convert datat type

--- a/04_python_numbers.ipynb
+++ b/04_python_numbers.ipynb
@@ -28,7 +28,14 @@
     "Eg. `X = 6.1j` or `Y = -2.5+4.95j` or `Z = -92j`  \n",
     "\n",
     "#### Conversion of Data Type\n",
-    "\n"
+    "\n",
+    "You can convert:  \n",
+    "1. int to float  \n",
+    "2. int to complex  \n",
+    "3. float to int  \n",
+    "4. float to complex  \n",
+    ">[!NOTE]\n",
+    ">You cannot convert complex to any other datatype."
    ]
   }
  ],
