--- a/04_python_numbers.ipynb
+++ b/04_python_numbers.ipynb
@@ -37,6 +37,19 @@
     ">[!NOTE]\n",
     ">You cannot convert complex to any other datatype."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create int variables\n",
+    "\n",
+    "#create float variables\n",
+    "\n",
+    "#create complex variables"
+   ]
   }
  ],
  "metadata": {
