--- a/04_python_numbers.ipynb
+++ b/04_python_numbers.ipynb
@@ -23,19 +23,67 @@
     "\n",
     "### Python Complex\n",
     "\n",
-    "Normall complex numbers are written in the form of a+ib where i is the imaginary part.  \n",
+    "Are usually in the form of a+ib or a-ib where i is the imaginary part.  \n",
     "In Python, j is the imaginary part.  \n",
-    "Eg. `X = 6.1j` or `Y = -2.5+4.95j` or `Z = -92j`  \n",
+    "Eg. `X = 6.1j` or `Y = -2.5+4.95j` or `Z = -92j`  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "<class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create int variables\n",
+    "x = -283873                 #negative int\n",
+    "y = 474                     #positive int\n",
+    "z = 1                       #positive int\n",
     "\n",
+    "#create float variables\n",
+    "a = -273.873464             #negative float\n",
+    "b = 211.0                   #positive float\n",
+    "c = 244.9850                #positive float\n",
+    "\n",
+    "#create float using e or E\n",
+    "A = -23.7E48\n",
+    "B = 245e96\n",
+    "\n",
+    "#create complex variables\n",
+    "X = 6.1j\n",
+    "Y = -2.5+4.95j\n",
+    "Z = -92j\n",
+    "\n",
+    "print(type(x))\n",
+    "print(type(a))\n",
+    "print(type(A))\n",
+    "print(type(X))\n",
+    "#feel free to check the data types of the other variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Conversion of Data Type\n",
     "\n",
     "You can convert:  \n",
     "1. int to float  \n",
-    "2. int to complex  \n",
+    "2. int to complex    \n",
     "3. float to int  \n",
     "4. float to complex  \n",
     ">[!NOTE]\n",
-    ">You cannot convert complex to any other datatype."
+    ">You cannot convert complex to any other datatype.  "
    ]
   },
   {
@@ -44,22 +92,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create int variables\n",
-    "x = -283873\n",
-    "y = 474\n",
-    "z = 1\n",
+    "X = 12\n",
+    "Y = -8372.9932\n",
+    "Z = 23.3-9j\n",
     "\n",
-    "#create float variables\n",
-    "a = -273.873464\n",
-    "b = 211.0\n",
-    "c = 244.9850 \n",
-    "#create complex variables"
+    "#convert int to float\n",
+    "A = float(X)\n",
+    "\n",
+    "#convert int to complex\n",
+    "B = complex(X)\n",
+    "\n",
+    "#convert float to int\n",
+    "C = int(Y)\n",
+    "\n",
+    "#convert float to complex\n",
+    "D = complex(Y)\n",
+    "\n",
+    "#converting complex to int or complex to float will give an error\n",
+    "# eg E = int(Z) or F = complex(Z)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
