--- a/04_python_numbers.ipynb
+++ b/04_python_numbers.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "There are of three types: `int` `float` `complex`  \n",
     "\n",
-    "#### Python Integers\n",
+    "### Python Integers\n",
     "\n",
     "These are whole numbers both positive and negative.  \n",
     "They are whole numbers meaning they do not include decimals.  \n",
