--- a/04_python_numbers.ipynb
+++ b/04_python_numbers.ipynb
@@ -19,7 +19,7 @@
     "These are numbers positive or negative containing one or more decimal.  \n",
     "Eg. `a = -273.873463` or `b = 211.0` or `c = 244.9850`  \n",
     "They can also indicate the power of 10 using **e** or **E**  \n",
-    "Eg. `A = -23.7E48` to mean -23.7*10<sub>48</sub>  \n",
+    "Eg. `A = -23.7E48` to mean -23.7*10<sup>48</sup>  \n",
     "\n",
     "### Python Complex\n",
     "\n",
