--- a/04_python_numbers.ipynb
+++ b/04_python_numbers.ipynb
@@ -88,9 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0 (12+0j) -8372 (-8372.9932+0j)\n",
+      "<class 'float'>\n",
+      "<class 'complex'>\n",
+      "<class 'int'>\n",
+      "<class 'complex'>\n"
+     ]
+    }
+   ],
    "source": [
     "X = 12\n",
     "Y = -8372.9932\n",
@@ -109,7 +121,14 @@
     "D = complex(Y)\n",
     "\n",
     "#converting complex to int or complex to float will give an error\n",
-    "# eg E = int(Z) or F = complex(Z)"
+    "# eg E = int(Z) or F = complex(Z)\n",
+    "\n",
+    "print(A, B, C, D)\n",
+    "\n",
+    "print(type(A))\n",
+    "print(type(B))\n",
+    "print(type(C))\n",
+    "print(type(D))"
    ]
   }
  ],
