--- a/python_lists.ipynb
+++ b/python_lists.ipynb
@@ -13,7 +13,8 @@
     "List items are:  \n",
     "1.**Ordered** - Have a specific order, each item in a list has a specific index.  \n",
     "2.**Mutable** - This means changeable, we can remove/add/change items in a list.  \n",
-    "3.**Allow Duplicates** - Lists can have items with the same value.  "
+    "3.**Allow Duplicates** - Lists can have items with the same value.  \n",
+    "To check length of list use **len()**"
    ]
   },
   {
@@ -27,7 +28,10 @@
     "mylist_3 = [28.907, -87-32, 912.3]\n",
     "mylist_4 = [23+97j, -98.76-3j, 21+8j]\n",
     "mylist_5 = [12, 340, 45, 45, 1, 0]\n",
-    "mylist_6 = [\"cat\", True, 45, 28.907, 21+8j]"
+    "mylist_6 = [\"cat\", True, 45, 28.907, 21+8j]\n",
+    "print(len(mylist_6))\n",
+    "print(type(mylist_3))\n",
+    "#feel free to check length and data type of the other lists"
    ]
   },
   {
@@ -35,7 +39,9 @@
    "metadata": {},
    "source": [
     "### Access List Items  \n",
-    "\n"
+    "\n",
+    "As saide before, items in a list are ordered.  \n",
+    "E"
    ]
   }
  ],
