--- a/python_lists.ipynb
+++ b/python_lists.ipynb
@@ -41,7 +41,9 @@
     "### Access List Items  \n",
     "\n",
     "As saide before, items in a list are ordered.  \n",
-    "E"
+    "Each item in a list has an index.  \n",
+    "The **first** item in a list has index 0.  \n",
+    "\n"
    ]
   }
  ],
