--- a/python_lists.ipynb
+++ b/python_lists.ipynb
@@ -23,12 +23,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mylist_1 = [True, False, True]\n",
-    "mylist_2 = [\"cat\", \"dog\", \"hen\"]\n",
-    "mylist_3 = [28.907, -87-32, 912.3]\n",
-    "mylist_4 = [23+97j, -98.76-3j, 21+8j]\n",
-    "mylist_5 = [12, 340, 45, 45, 1, 0]\n",
-    "mylist_6 = [\"cat\", True, 45, 28.907, 21+8j]\n",
+    "mylist_1 = [True, False, True]               #bool\n",
+    "mylist_2 = [\"cat\", \"dog\", \"hen\"]             #str\n",
+    "mylist_3 = [28.907, -87-32, 912.3]           #float\n",
+    "mylist_4 = [23+97j, -98.76-3j, 21+8j]        #complex\n",
+    "mylist_5 = [12, 340, 45, 45, 1, 0]           #int\n",
+    "mylist_6 = [\"cat\", True, 45, 28.907, 21+8j]  #list with different datatypes\n",
     "print(len(mylist_6))\n",
     "print(type(mylist_3))\n",
     "#feel free to check length and data type of the other lists"
@@ -40,11 +40,29 @@
    "source": [
     "### Access List Items  \n",
     "\n",
-    "As saide before, items in a list are ordered.  \n",
-    "Each item in a list has an index.  \n",
-    "The **first** item in a list has index 0.  \n",
-    "\n"
+    "As saide before, items in a list are ordered, each item in a list has an index.  \n",
+    "The **first** item in a list has index 0. \n",
+    "So `print(mylist[0])` will print the first item on the specified list.  \n",
+    "The **second** item has index 1 etc.  \n",
+    "The **last** item has index -1.  \n",
+    "So `print(mylist[-1])` will print last item on the specified list.  \n",
+    "The **second last** item has index -2 etc.  \n",
+    "To access many items from a list, separate the index with a colon.  \n",
+    "Eg `print(mylist[0:2])` \n",
+    "This will return items at index 0, index 1. Index 2 will be excluded.  \n",
+    "So it will return first and second item in the list.  \n",
+    "The same happens for `print(mylist[-4:-1])`  \n",
+    "This will return items at index -4, -3 and -2 only.  \n",
+    "`print(mylist[:4])` - this will return items from first item to index 4.  \n",
+    "`print(mylist[2:])` - this will return items from index 2 to last item.  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
