--- a/python_lists.ipynb
+++ b/python_lists.ipynb
@@ -50,12 +50,12 @@
     "### Access List Items  \n",
     "\n",
     "As saide before, items in a list are ordered, each item in a list has an index.  \n",
-    "The **first** item in a list has index 0. \n",
+    "The **first** item in a list has index **0**.  \n",
     "So `print(mylist[0])` will print the first item on the specified list.  \n",
-    "The **second** item has index 1 etc.  \n",
-    "The **last** item has index -1.  \n",
+    "The **second** item has index **1** etc.  \n",
+    "The **last** item has index **-1**.  \n",
     "So `print(mylist[-1])` will print last item on the specified list.  \n",
-    "The **second last** item has index -2 etc.  \n",
+    "The **second last** item has index **-2** etc.  \n",
     "To access many items from a list, separate the index with a colon.  \n",
     "Eg `print(mylist[0:2])` \n",
     "This will return items at index 0, index 1. Index 2 will be excluded.  \n",
@@ -65,10 +65,10 @@
     "`print(mylist[:4])` - this will return items from first item to index 3.  \n",
     "`print(mylist[2:])` - this will return items from index 2 to last item.  \n",
     ">[!NOTE]\n",
-    ">First item is index 0\n",
-    ">Last item is index -1\n",
-    ">the end value is usually excluded\n",
-    ">Eg list[1:4] will return items from index 1 to 3"
+    ">First item is index 0  \n",
+    ">Last item is index -1  \n",
+    ">the end value is usually excluded  \n",
+    ">Eg list[1:4] will return items from index 1 to 3  "
    ]
   },
   {
