--- a/python_lists.ipynb
+++ b/python_lists.ipynb
@@ -64,7 +64,7 @@
     "This will return items at index -4, -3 and -2 only.  \n",
     "`print(mylist[:4])` - this will return items from first item to index 3.  \n",
     "`print(mylist[2:])` - this will return items from index 2 to last item.  \n",
-    ">[!NOTE]\n",
+    ">[!NOTE]  \n",
     ">First item is index 0  \n",
     ">Last item is index -1  \n",
     ">the end value is usually excluded  \n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,8 @@
       "[28.907, (21+8j)]\n",
       "['cat', True, 45, 28.907]\n",
       "[28.907, (21+8j), False, 'hen']\n",
-      "['cat', True, 45, 28.907, (21+8j), False, 'hen']\n"
+      "['cat', True, 45, 28.907, (21+8j), False, 'hen']\n",
+      "45 is in the list\n"
      ]
     }
    ],
@@ -106,8 +107,18 @@
     "\n",
     "print(mylist_6[:4])     #start to index 3 so start to forth item\n",
     "print(mylist_6[3:])     #index 3 to last so forth item to last\n",
-    "print(mylist_6[:])      #start to last"
+    "print(mylist_6[:])      #start to last\n",
+    "\n",
+    "#using if..else to access items in list\n",
+    "#we will look at if..else later\n",
+    "if 45 in mylist_6:\n",
+    "        print(\"45 is in the list\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
