--- a/python_lists.ipynb
+++ b/python_lists.ipynb
@@ -67,7 +67,7 @@
     ">[!NOTE]  \n",
     ">First item is index 0  \n",
     ">Last item is index -1  \n",
-    ">the end value is usually excluded  \n",
+    ">The end value is usually excluded  \n",
     ">Eg list[1:4] will return items from index 1 to 3  "
    ]
   },
@@ -118,7 +118,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Change List Items\n",
+    "\n",
+    "We use the index number to achieve this.  \n"
+   ]
   }
  ],
  "metadata": {
