--- a/python_lists.ipynb
+++ b/python_lists.ipynb
@@ -121,7 +121,64 @@
    "source": [
     "### Change List Items\n",
     "\n",
-    "We use the index number to achieve this.  \n"
+    "We use the index number to achieve this.  \n",
+    "Eg `mylist_6[2] = 21` will change the item at index 2 to 21.  \n",
+    "Eg  `mylist_6[1:3] = [\"dog\", True]` will change items at index 1 to \"dog\", and index 2 to True.  \n",
+    "Notice in the above example items inserted(\"dog\" and True) = items changed(at index 1 and 2).  \n",
+    ">[!NOTE]  \n",
+    ">If items inserted are MORE/LESS than items replaced,  \n",
+    ">The new items will be inserted where specified. \n",
+    ">And the length of the list changes.   \n",
+    "Eg `mylist[0:1] = 12, 87` will replace item at index 0 with 12 and 87.  \n",
+    "Eg `mylist[0:3] = 32.21` will replace item at index 0 and 1 with 32.21.  \n",
+    "The **insert()** method can also be used.  \n",
+    "Eg `mylist.insert(1, \"boy\")` will insert instead of replace.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, True, 45, 28.907, (21+8j), False, 'hen']\n",
+      "[21, 'dog', True, 28.907, (21+8j), False, 'hen']\n",
+      "7\n",
+      "[12, 87, 'dog', True, 28.907, (21+8j), False, 'hen']\n",
+      "8\n",
+      "[2, True, 28.907, (21+8j), False, 'hen']\n",
+      "6\n",
+      "[2, 'boy', True, 28.907, (21+8j), False, 'hen']\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist_6 = [\"cat\", True, 45, 28.907, 21+8j, False, \"hen\"]\n",
+    "#Note that every time you change an item it creates a new list, and the old list \"no longer exists\"\n",
+    "#In this code mylist_6 items will change every time\n",
+    "#Note that whatever you are assigning is also a list i.e enclosed in [ ]\n",
+    "mylist_6[0] = 21\n",
+    "print(mylist_6)                     #reolace item at index 0 with 21\n",
+    "\n",
+    "mylist_6[1:3] = [\"dog\", True]\n",
+    "print(mylist_6)                     #replace item at index 1, 2 with \"dog\", True\n",
+    "print(len(mylist_6))\n",
+    "\n",
+    "mylist_6[0:1] = [12, 87]\n",
+    "print(mylist_6)                     #replace item at index 0 with 12, 87   length of list increases\n",
+    "print(len(mylist_6))\n",
+    "\n",
+    "mylist_6[0:3] = [2]\n",
+    "print(mylist_6)                     #replace item at index 0, 1, 2 with 2  length of list reduces\n",
+    "print(len(mylist_6))\n",
+    "\n",
+    "mylist_6.insert(1, \"boy\")\n",
+    "print(mylist_6)                     #inserts boy at index 1  length of list increases\n",
+    "print(len(mylist_6))"
    ]
   }
  ],
